--- a/public/covid19/index.html
+++ b/public/covid19/index.html
@@ -1,101 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Document</title>
 </head>
+
 <body>
- 
+  <!--NAVBAR-->
   <nav class="navleft">
-    <section class="container"> 
+    <section class="container">
       <ul>
-        <li >
-            <a href="#inicio">Home</a>
-        </li>       
         <li>
-          <button type="button" id="btnLogIn" class="btn btn-outline-primary" data-toggle="modal" data-target="#logIn">Sign in</button>
+          <a href="#inicio">Home</a>
+        </li>
+        <li>
+          <button type="button" id="btnLogIn" class="btn btn-outline-primary" data-toggle="modal"
+            data-target="#logIn">Sign in</button>
         </li>
       </ul>
-    </section>  
+    </section>
   </nav>
-<div id="toggle-form">
-  <div class="modal fade" id="logIn" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="logInToken" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content px-3 modal-form">
-        <div class="modal-header">
-          <h5 class="modal-title" id="logInToken">Iniciar sesion</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form id="form-login">
-            <div class="form-group mt-2">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="covid-mail" aria-describedby="emailHelp">
-              <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div>
-            <div class="form-group mt-2">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="covid-pass">
-            </div>
-            <!-- <div class="form-group form-check mt-2">
+  <div id="toggle-form">
+    <div class="modal fade" id="logIn" data-backdrop="static" data-keyboard="false" tabindex="-1"
+      aria-labelledby="logInToken" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content px-3 modal-form">
+          <div class="modal-header">
+            <h5 class="modal-title" id="logInToken">Iniciar sesion</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="form-login">
+              <div class="form-group mt-2">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="covid-mail" aria-describedby="emailHelp">
+                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+              </div>
+              <div class="form-group mt-2">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="covid-pass">
+              </div>
+              <!-- <div class="form-group form-check mt-2">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div> -->
-            <button type="submit" class="btn btn-primary mt-3" id="btnSubmit" onclick="javascript: $('#close-button').click();">Submit</button>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-button">Close</button>
-          <!-- <button type="submit" class="btn btn-primary">Log in</button> -->
+              <button type="submit" class="btn btn-primary mt-3" id="btnSubmit"
+                onclick="javascript: $('#close-button').click();">Submit</button>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="close-button">Close</button>
+            <!-- <button type="submit" class="btn btn-primary">Log in</button> -->
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-    <section class="container pt-5 bg-round">
-        <section id="covidChart"></section>        
-    </section>
-    <section class="container" id="tablaPais">
-        <table class="table table-striped table-hover" id="tabla-covid"></table>
-        <!-- Modal -->
-          <div class="modal fade" id="chartPais" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <div id="covidChartPais"></div>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <!-- <button type="button" class="btn btn-primary">Understood</button> -->
-                </div>
-              </div>
-            </div>
+  <section class="container pt-5 bg-round">
+    <section id="covidChart"></section>
+  </section>
+  <section class="container" id="tablaPais">
+    <table class="table table-striped table-hover" id="tabla-covid"></table>
+    <!-- Modal -->
+    <div class="modal fade" id="chartPais" data-backdrop="static" data-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-    </section>
-    
+          <div class="modal-body">
+            <div id="covidChartPais"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <!-- <button type="button" class="btn btn-primary">Understood</button> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-        crossorigin="anonymous"></script>
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-    <script src="./assets/scripts.js"></script>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+    crossorigin="anonymous"></script>
+  <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+  <script src="./assets/scripts.js"></script>
 </body>
+
 </html>
